// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<I18nProvider> children get i18n from context 1`] = `
<I18nProvider
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
>
  <TestElement>
    <div>
      Test
    </div>
  </TestElement>
</I18nProvider>
`;

exports[`localize Page render localized page 1`] = `
<I18nProvider
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
>
  <Page
    i18n={
      Object {
        "gettext": [Function],
        "lang": "en-US",
        "ngettext": [Function],
        "npgettext": [Function],
        "pgettext": [Function],
      }
    }
    locale={
      Object {
        "domain": "messages",
        "language": "en-US",
        "locale_data": Object {
          "messages": Object {
            "": Object {
              "domain": "messages",
            },
            "Ad Expense": Array [
              "Test Ad Expense",
            ],
            "App or Publisher": Array [
              "App or Publisher",
            ],
            "Cat": Array [
              "Cat",
              "Cats",
            ],
          },
        },
      }
    }
  />
</I18nProvider>
`;

exports[`translate Component render translated component 1`] = `
<TestElement
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
/>
`;
